--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-click == 8.0.1
+click >= 8.0.1
 matplotlib == 3.4.2
 numpy == 1.21.1
 pandas == 1.3.1
@@ -6,6 +6,5 @@ python_dotenv == 0.19.0
 scikit_learn == 0.24.2
 setuptools >= 52.0.0.post20210125
 xgboost == 1.3.3
-logging==0.4.9.6
 
 --editable .
